WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283210
REGRESSION(
285726@main
?): [macOS wk2]: http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html is a flaky failure (flaky in EWS)
https://bugs.webkit.org/show_bug.cgi?id=283210
Summary
REGRESSION(285726@main?): [macOS wk2]: http/wpt/mediarecorder/MediaRecorder-A...
Marta Darbinyan
Reported
2024-11-15 16:12:52 PST
The following test is a flaky failure in macOS and appear as flaky test in Ventura EWS. http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html The flakiness started around the change
285726@main
that touched the test code. Error: -PASS MediaRecorder can successfully record the video for a audio-video stream +FAIL MediaRecorder can successfully record the video for a audio-video stream assert_approx_equals: Red channel of the pixel at (25, 25) expected 255 +/- 50 but got 0 Test result:
https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/286644@main%20(753)/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable-diff.txt
History:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-AV-audio-video-dataavailable.html&flavor=wk2
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-15 16:15:00 PST
<
rdar://problem/140007072
>
Jean-Yves Avenard [:jya]
Comment 2
2025-01-23 05:49:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39448
EWS
Comment 3
2025-01-25 19:53:11 PST
Committed
289400@main
(8dd1134bc4ff): <
https://commits.webkit.org/289400@main
> Reviewed commits have been landed. Closing PR #39448 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug