REGRESSION(285726@main?): [macOS wk2]: http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html is a flaky failure (flaky in EWS) https://bugs.webkit.org/show_bug.cgi?id=283210 rdar://140007072

Reviewed by Youenn Fablet.

The test was painting red in a canvas for 0.5s following by green for 1.5.
However, due the the MediaRecorder potentially taking times to actually start recording
it was possible that we only got a single red frame at the start of the video.
The test seeked to 0.05 check the colours and then at the duration-0.05.
Due to the delay described above, at 0.05 the frame could actually be green.
Instead we should be seeking to 0; however as the video may not have starting
playing then, we wouldn't have got the seekend event.
So instead we first seek to the end, check that it's green and then seek
to the start and check that it's red.
We also paint red for 1s instead of 0.5s to give more time for the recording
to start on slow machines.

Manually testing however still indicated an issue, with the MP4 player
(specifically MediaPlayerPrivateAVFObjC) there's no guarantee that when
the seeked even is fired, the right frame is actually already displayed
(webkit.org/b/236755), and so checking the frame could fail as the old
frame is still being displayed.

To get around this we now use a MediaSource insted as the MSE player (and WebM player)
do guarantee that the right frame is being displayed once the seeked event is fired.

Fly-By: VideoMediaSampleRenderer::copyDisplayedPixelBuffer may have returned
nullptr when seeking to 0 and the first video frame had a time in the future
(such video file can be currently incorrectly generated by the MediaRecorder).

* LayoutTests/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::copyDisplayedPixelBuffer): Return the
last video frame, even if in the future if it is currently visible.

Canonical link: https://commits.webkit.org/289400@main